# fstrings-rust

./: Cargo.toml
src/: lib.rs
src/proc_macro/: mod.rs
